--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ $(function() {
 <body>
 <div class="container">
 
-<div class="row">
-input
-</div>
+	<div class="row">input</div>
+	
+	
 	<div class="form-group row">
 		<label for="thickness" class="col-sm-2 col-form-label">thickness:</label>
    		<div class="col-sm-10">
