--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<style>
+		body { font-size: 80%; }
 	</style>
 
 	<script type="text/javascript">
@@ -111,7 +112,7 @@ $(function() {
 	
 	<h1>Markers</h1>
     
-    	<table id="markers" class="table table-striped table-bordered" style="width:100%">
+    	<table id="markers" class="table table-striped table-condensed" style="width:100%">
         	<thead>
             		<tr><th>No.</th><th>Position</th></tr>
         	</thead>
