--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<style>
-		body { margin: 80%; padding: 50%; }
+		body { padding: 50%; }
 	</style>
 
 	<script type="text/javascript">
