--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ function update_calculation() {
 		return x * w0 / width_total;
 	};
 	
+	svg_drawing.clear();
 	svg_drawing.rect(w0, h0).move(x0, y0);
 
 	for (i = 0; i< count; ++i) {
