--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function update_calculation() {
 	};
 	
 	var polyrect = function(w, h) {
-		return [0, 0, w, 0, w, h, 0, h, w, 0];
+		return [0, 0,    w, 0,    w, h,     0, h,    0, 0];
 	}
 	
 	var line_style = { color: '#f06', width: 1, linecap: 'round', linejoin: 'round' };
