--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ $(function() {
    	 	</div>
   	</div>    
 	
-	<button type="button" class="btn btn-primary" id="btn-update">Update</button>
+	<button type="button" class="btn btn-primary hidden-print" id="btn-update">Update</button>
     
 	<h2>Result</h2>
 
