--- a/index.html
+++ b/index.html
@@ -62,14 +62,6 @@ function update_calculation() {
 	$("#width_total").val( width_total );
 	$("#width_single").val( width_single );
 
-	$('#markers > tbody').empty();
-	var i;
-	for (i = 0; i< count; ++i) {
-		var marker1 = margin + i*(thickness + spacing);
-		var marker2 = marker1 + thickness;
-		$('#markers').append('<tr><td>'+(i+1)+' L</td><td>'+marker1+'</td></tr>');
-		$('#markers').append('<tr><td>'+(i+1)+' R</td><td>'+marker2+'</td></tr>');
-	}
 
 	var svg_width = svg_drawing.viewbox().width;
 	var w0 = svg_width * 0.9;
@@ -92,13 +84,20 @@ function update_calculation() {
 	svg_drawing.clear();
 	
 	svg_drawing.polyline(polyrect(w0, h0)).move(x0, y0).fill('none').stroke(line_style);
+	$('#markers > tbody').empty();
 	
+	var i;
 	for (i = 0; i< count; ++i) {
 		var marker1 = margin + i*(thickness + spacing);
-		var polyline = svg_drawing.polyline(polyrect(transform_coord_x(thickness), 70));
+		var marker2 = marker1 + thickness;
+		$('#markers').append('<tr><td>'+(i+1)+'</td><td>'+marker1+'</td><td>'+marker2+'</td></tr>');
+
+		//var polyline = svg_drawing.polyline(polyrect(transform_coord_x(thickness), 70));
+		var polyline = svg_drawing.rect(transform_coord_x(thickness), 70);
 		polyline.move(x0 + transform_coord_x(marker1), 10);
 		polyline.fill(fill_style_board);
 		polyline.stroke(line_style);
+
 	}
 
 }
@@ -174,7 +173,7 @@ $(function() {
     	
 	<table id="markers" class="table table-striped table-condensed" style="width:100%">
         	<thead>
-            		<tr><th>No.</th><th>Position</th></tr>
+			<tr><th>No.</th><th>Position L</th><th>Position R</th></tr>
         	</thead>
         	<tbody></tbody>
      	</table>
