--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ $(function() {
    	 	</div>
   	</div>    
 	
-	<button type="button" class="btn btn-primary hidden-print" id="btn-update">Update</button>
+	<button type="button" class="btn btn-primary d-print-none" id="btn-update">Update</button>
     
 	<h2>Result</h2>
 
@@ -181,10 +181,11 @@ $(function() {
         	<tbody></tbody>
      	</table>
     
-	<h2>About</h2>
+	<div class="d-print-none">
+		<h2>About</h2>
+		<a href="https://github.com/mru00/board-layout">Repository</a>
+	</div>
 	
-	<a href="https://github.com/mru00/board-layout">Repository</a>
-
 	
 	</div>
 
