--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ function update_calculation() {
 			poly = svg_drawing.polyline(polyrect(transform_coord_x(thickness), 70));
 		}
 		else {
-			poly = svg_drawing.line(0, 0, 0, 70));
+			poly = svg_drawing.line(0, 0, 0, 70);
 		}
 		poly.move(x0 + transform_coord_x(marker1), 10)
 			.fill(fill_style_board)
