--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<style>
 @media print {
 	
-	.table { page-break-inside: avoid; }
+	.avoid-page-break { page-break-inside: avoid; }
 	
 		}
 	</style>
@@ -182,16 +182,18 @@ $(function() {
    	 	</div>
   	</div>
 
-	<div id="drawing"></div>
+	<div id="drawing" class="center-block"></div>
 
-	<h2>Markers</h2>
+	<div class="avoid-page-break">
+		<h2>Markers</h2>
     	    	
-	<table id="markers" class="table table-striped table-condensed" style="width:100%">
-        	<thead>
-			<tr><th>No.</th><th>Position L</th><th>Position R</th></tr>
-        	</thead>
-        	<tbody></tbody>
-     	</table>
+		<table id="markers" class="table table-striped table-condensed" style="width:100%">
+        		<thead>
+				<tr><th>No.</th><th>Position L</th><th>Position R</th></tr>
+        		</thead>
+        		<tbody></tbody>
+     		</table>
+	</div>
     
 	<div class="d-print-none">
 		<h2>About</h2>
