--- a/index.html
+++ b/index.html
@@ -141,26 +141,26 @@ $(function() {
 	<h2>Input</h2>
 		
 	<div class="form-group row">
-		<label for="thickness" class="col-sm-3 col-form-label">thickness:</label>
-   		<div class="col-sm-9">
+		<label for="thickness" class="col-3 col-form-label">thickness:</label>
+   		<div class="col-9">
 		        <input id="thickness" type="number" placeholder="thickness" class="form-control target">
    	 	</div>
   	</div>
 	<div class="form-group row">
-    		<label for="spacing" class="col-sm-3 col-form-label">spacing:</label>
-   		<div class="col-sm-9">
+    		<label for="spacing" class="col-3 col-form-label">spacing:</label>
+   		<div class="col-9">
     			<input type="number" class="form-control target" id="spacing">
    	 	</div>
   	</div>
 	<div class="form-group row">
-    		<label for="margin" class="col-sm-3 col-form-label">margin:</label>
-   		<div class="col-sm-9">
+    		<label for="margin" class="col-3 col-form-label">margin:</label>
+   		<div class="col-9">
 	    		<input type="number" class="form-control target" id="margin">
    	 	</div>
   	</div>
 	<div class="form-group row">
-    		<label for="count" class="col-sm-3 col-form-label">count:</label>
-   		<div class="col-sm-9">
+    		<label for="count" class="col-3 col-form-label">count:</label>
+   		<div class="col-9">
     			<input type="number" class="form-control target" id="count">
    	 	</div>
   	</div>    
@@ -170,14 +170,14 @@ $(function() {
 	<h2>Result</h2>
 
 	<div class="form-group row">
-    		<label for="width_single" class="col-sm-3 col-form-label">width board+spacing:</label>
-   		<div class="col-sm-9">
+    		<label for="width_single" class="col-3 col-form-label">width board+spacing:</label>
+   		<div class="col-9">
     			<input type="number" class="form-control" id="width_single" readonly>
    	 	</div>
   	</div>
 	<div class="form-group row">
-	  	<label for="width_total" class="col-sm-3 col-form-label">total width:</label>
-		<div class="col-sm-9">
+	  	<label for="width_total" class="col-3 col-form-label">total width:</label>
+		<div class="col-9">
     			<input type="number" class="form-control" id="width_total" readonly>
    	 	</div>
   	</div>
