--- a/index.html
+++ b/index.html
@@ -165,8 +165,6 @@ $(function() {
 	
 	<div class="form-group row">
     		<label for="margin" class="col-3 col-form-label">margin:</label>
-   		<div class="col-9">
-   	 	</div>
 		<div class="input-group col-9">
 	    		<input type="number" class="form-control target" id="margin" min="0">
   			<div class="input-group-append">
@@ -183,8 +181,10 @@ $(function() {
    	 	</div>
   	</div>    
 	
-	<button type="button" class="btn btn-primary d-print-none" id="btn-update">Update</button>
-    
+	<div class="float-right">
+		<button type="button" class="btn btn-primary d-print-none" id="btn-update">Update</button>
+	</div>
+	
 	<h2>Result</h2>
 
 	<div class="form-group row">
