--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function update_calculation() {
 		return x * w0 / width_total;
 	};
 		
-	var line_style = { color: 'black', width: 1, linecap: 'round', linejoin: 'round' };
+	var line_style = { color: 'black', width: 1 };
 	var fill_style_board = 'BurlyWood';
 	var fill_style_single = 'NavajoWhite';
 	
