--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@ $(function() {
 	$("#spacing_2_1").click(spacing_2_1);
 	$("#margin_1_1").click(margin_1_1);
 	$("#margin_2_1").click(margin_2_1);
-	$("#btn-mode-total").click(set_mode_total);
-	$("#btn-mode-spacing").click(set_mode_spacing);
+	$("#btn-mode-total").change(set_mode_total);
+	$("#btn-mode-spacing").change(set_mode_spacing);
 });
 });
 	</script>
