--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ function update_calculation() {
 	}
 	else if (mode == "spacing") {
 		spacing = (width_total - 2*margin - count*thickness) / (count -1);
+		$("#inp-spacing").val(spacing);
 	}
 	
 	if (typeof(Storage) !== "undefined") {
